fix (organisations): ui shift due to missing min-height

--- a/web/sdk/admin/views/organizations/details/layout/layout.module.css
+++ b/web/sdk/admin/views/organizations/details/layout/layout.module.css
@@ -21,6 +21,11 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  min-height: var(--rs-space-11);
+}
+
+.navbar-sidepanel-button {
+  flex-shrink: 0;
 }
 
 .navbar-action-menu-content {
